food type added

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,6 +67,7 @@
                         </div>
                         <div class="catalog-text">
                             <a href="#"><h1>{{ food.name }}</h1></a>
+                            <p>{{ food.type }}</p>
                             <p>{{ food.compound }}</p>
                             <p>{{ food.weight }}</p>
                             <p>{{ food.price }}</p>
