--- a/templates/login.html
+++ b/templates/login.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-    <h2>Log in</h2>
-    <form action="{% url 'sign_user' %}" method="post">
-        {% csrf_token %}
-      <!-- Email input -->
-      <div>
-        <input type="text" name="username" id="form2Example1" />
-        <label for="form2Example1">User name</label>
-      </div>
-
-      <!-- Password input -->
-      <div>
-        <input type="password" name="password" id="form2Example2" />
-        <label for="form2Example2">Password</label>
-      </div>
-
-      <!-- Submit button -->
-      <input type="submit" value="login">
-
-      <div>
-        <p>Not a member? <a href="#">Register</a></p>
-      </div>
-
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}
+<title>login</title>
+{% endblock %}
+{% block content %}
+<aside>
+    <div class="container logins">
+        <div class="login">
+            <form action="{% url 'sign_user' %}" method="POST">
+                {% csrf_token %}
+                <h2>Авторизация</h2>
+                <div class="input">
+                    <input type="text" name="username" placeholder="Логин" id="">
+                </div>
+                <div class="input">
+                    <input type="password" placeholder="Пароль" name="password" id="">
+                </div>
+                <div class="btn">
+                    <button type="submit" style="margin-left: 36px;">
+                        Войти
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</aside>
+{% endblock %}
