--- a/templates/admin.html
+++ b/templates/admin.html
@@ -26,11 +26,11 @@
                     </div>
                     <div>
                         <h5>Название:</h5>
-                        <input type="text" name="name">
+                        <input type="text" name="name" style="width: 169px;">
                     </div>
                     <div>
                         <h5>Тип блюда:</h5>
-                        <select name="type" required>
+                        <select name="type" required style="width: 169px;">
                             {% for type in food_types %}
                             <option value="{{ type.id }}" name="city">{{ type }}</option>
                             {% endfor %}
@@ -42,22 +42,22 @@
                             <div class="change">
                                 <h6>Change:</h6>
                                 <div class="changes">
-                                    <input type="file" name="image" placeholder="" required>
+                                    <input type="file" name="image" placeholder="" required style="width: 169px;">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div>
                         <h5>Состав:</h5>
-                        <input type="text" name="compound">
+                        <input type="text" name="compound" style="width: 169px;">
                     </div>
                     <div>
                         <h5>Вес:</h5>
-                        <input type="text" name="weight">
+                        <input type="text" name="weight" style="width: 169px;">
                     </div>
                     <div>
                         <h5>Цена:</h5>
-                        <input type="text" name="price">
+                        <input type="text" name="price" style="width: 169px;">
                     </div>
                     <div class="btn">
                         <button type="submit" style="padding: 0.5em 1em; background: #df8222; border-radius: 15px; border: none; margin-left: 22px;">
