--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,16 @@
                                 <a href="#"><img src="{{ food.image.url }}" alt=""></a>
                             </div>
                             <div class="catalog-text">
-                                <a href="#"><h3>{{ food.name }}</h3></a>
+                                <form action="{% url 'cart:cart_add' food.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <input type="hidden" value="1" name="quantity">
+                                    <input type="hidden" value="True" name="update">
+                                    <button type="submit" style="background: none;color: inherit;border: none;">
+                                        <h4>{{ food.name }}</h4>
+                                    </button>
+                                </form>
+                                <small class="text">{{ food.compound }}</small><br>
+                                <small class="text">{{ food.price }} сом</small>
                             </div>
                         </div>
                     </div>
