--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
     {% if user.is_authenticated %}
         <li><a href="{% url 'admin' %}" class="header__link log-in">Администрация</a></li>
         <li class="li-link"><a href="{% url 'sign_out' %}" class="header__link log-in">Выход</a></li>
+        {% if orders %}
+        <li class="li-link"><a href="{% url 'new_orders' %}" class="header__link log-in" style="color: red;">Новые заказы</a></li>
+        {% endif %}
+        <li><a href="{% url 'orders_history' %}" class="header__link log-in">История заказов</a></li>
     {% else %}
         <li><a href="{% url 'sign_user' %}" class="header__link log-in">Вход</a></li>
     {% endif %}
